--- a/vignettes/data-viz.Rmd
+++ b/vignettes/data-viz.Rmd
@@ -148,7 +148,7 @@ teams <- read_csv(here("data", "team_standings.csv"))
 teams
 ```
 
-## Data frames and tibbles
+# Data frames and tibbles
 
 The **data frame** (or `data.frame`) is a **key data structure** in statistics and in R.
 
@@ -158,7 +158,7 @@ Given the importance of managing data frames, it is **important that we have goo
 
 For example, **operations** like filtering rows, re-ordering rows, and selecting columns, can often be tedious operations in R whose syntax is not very intuitive. The `dplyr` package in the `tidyverse` is designed to mitigate a lot of these problems and to provide a highly optimized set of routines specifically for dealing with data frames.
 
-### Tibbles
+## Tibbles
 
 Another type of data structure that we need to discuss is called the **tibble**! It's best to think of tibbles as an updated and stylish version of the `data.frame`.
 
@@ -168,7 +168,7 @@ In fact, they still work with `data.frames`, but the more you work with tidyvers
 
 Before we go any further, tibbles *are* data frames, but they have some new bells and whistles to make your life easier.
 
-#### How tibbles differ from `data.frame`
+## How tibbles differ from `data.frame`
 
 There are a number of differences between tibbles and `data.frames`.
 
@@ -181,7 +181,7 @@ We will summarize some of the most important points here:
 -   **There are no `row.names()` for a tibble** - Tidy data requires that variables be stored in a consistent way, removing the need for row names.
 -   **Tibbles print first ten rows and columns that fit on one screen** - Printing a tibble to screen will never print the entire huge data frame out. By default, it just shows what fits to your screen.
 
-### `as_tibble()`
+## `as_tibble()`
 
 Since many packages use the historical `data.frame` from base R, you will often find yourself in the situation that you have a `data.frame` and want to convert that `data.frame` to a `tibbl`e.
 
@@ -274,7 +274,7 @@ You may get some warnings when the package is loaded because there are functions
 We will continue to use the `chicago` dataset containing air pollution and temperature data.
 
 ```{r}
-chicago <- dplyr::as_tibble(chicago)
+chicago <- as_tibble(chicago)
 str(chicago)
 ```
 
@@ -303,7 +303,7 @@ head(subset)
 You can also **omit** variables using the `select()` function by using the negative sign. With `select()` you can do
 
 ```{r, eval=FALSE}
-dplyr::select(chicago, -(city:dptp))
+select(chicago, -(city:dptp))
 ```
 
 which indicates that we should include every variable *except* the variables `city` through `dptp`. The equivalent code in base R would be
@@ -319,14 +319,14 @@ Not super intuitive, right?
 The `select()` function also allows a special syntax that allows you to specify variable names based on patterns. So, for example, if you wanted to keep every variable that ends with a "2", we could do
 
 ```{r}
-subset <- dplyr::select(chicago, ends_with("2"))
+subset <- select(chicago, ends_with("2"))
 str(subset)
 ```
 
 Or if we wanted to keep every variable that starts with a "d", we could do
 
 ```{r}
-subset <- dplyr::select(chicago, starts_with("d"))
+subset <- select(chicago, starts_with("d"))
 str(subset)
 ```
 
@@ -341,7 +341,7 @@ The `filter()` function is used to **extract subsets of rows** from a data frame
 Suppose we wanted to extract the rows of the `chicago` data frame where the levels of PM2.5 are greater than 30 (which is a reasonably high level), we could do
 
 ```{r}
-chic.f <- dplyr::filter(chicago, pm25tmean2 > 30)
+chic.f <- filter(chicago, pm25tmean2 > 30)
 str(chic.f)
 ```
 
@@ -355,8 +355,8 @@ summary(chic.f$pm25tmean2)
 We can place an arbitrarily complex logical sequence inside of `filter()`, so we could for example extract the rows where PM2.5 is greater than 30 *and* temperature is greater than 80 degrees Fahrenheit.
 
 ```{r}
-chic.f <- dplyr::filter(chicago, pm25tmean2 > 30 & tmpd > 80)
-dplyr::select(chic.f, date, tmpd, pm25tmean2)
+chic.f <- filter(chicago, pm25tmean2 > 30 & tmpd > 80)
+select(chic.f, date, tmpd, pm25tmean2)
 ```
 
 Now there are only `r nrow(chic.f)` observations where both of those conditions are met.
@@ -387,32 +387,32 @@ The `arrange()` function is used to **reorder rows** of a data frame according t
 Here we can order the rows of the data frame by date, so that the first row is the earliest (oldest) observation and the last row is the latest (most recent) observation.
 
 ```{r}
-chicago <- dplyr::arrange(chicago, date)
+chicago <- arrange(chicago, date)
 ```
 
 We can now check the first few rows
 
 ```{r}
-head(dplyr::select(chicago, date, pm25tmean2), 3)
+head(select(chicago, date, pm25tmean2), 3)
 ```
 
 and the last few rows.
 
 ```{r}
-tail(dplyr::select(chicago, date, pm25tmean2), 3)
+tail(select(chicago, date, pm25tmean2), 3)
 ```
 
 Columns can be arranged in descending order too by useing the special `desc()` operator.
 
 ```{r}
-chicago <- dplyr::arrange(chicago, desc(date))
+chicago <- arrange(chicago, desc(date))
 ```
 
 Looking at the first three and last three rows shows the dates in descending order.
 
 ```{r}
-head(dplyr::select(chicago, date, pm25tmean2), 3)
-tail(dplyr::select(chicago, date, pm25tmean2), 3)
+head(select(chicago, date, pm25tmean2), 3)
+tail(select(chicago, date, pm25tmean2), 3)
 ```
 
 ## `rename()`
@@ -430,7 +430,7 @@ The `dptp` column is supposed to represent the dew point temperature and the `pm
 However, these names are pretty obscure or awkward and probably be renamed to something more sensible.
 
 ```{r}
-chicago <- dplyr::rename(chicago, dewpoint = dptp, pm25 = pm25tmean2)
+chicago <- rename(chicago, dewpoint = dptp, pm25 = pm25tmean2)
 head(chicago[, 1:5], 3)
 ```
 
@@ -448,7 +448,7 @@ For example, with air pollution data, we often want to *detrend* the data by sub
 Here, we create a `pm25detrend` variable that subtracts the mean from the `pm25` variable.
 
 ```{r}
-chicago <- dplyr::mutate(chicago, pm25detrend = pm25 - mean(pm25, na.rm = TRUE))
+chicago <- mutate(chicago, pm25detrend = pm25 - mean(pm25, na.rm = TRUE))
 head(chicago)
 ```
 
@@ -457,9 +457,9 @@ There is also the related `transmute()` function, which does the same thing as `
 Here, we de-trend the PM10 and ozone (O3) variables.
 
 ```{r}
-head(dplyr::transmute(chicago, 
-                      pm10detrend = pm10tmean2 - mean(pm10tmean2, na.rm = TRUE),
-                      o3detrend = o3tmean2 - mean(o3tmean2, na.rm = TRUE)))
+head(transmute(chicago, 
+               pm10detrend = pm10tmean2 - mean(pm10tmean2, na.rm = TRUE),
+               o3detrend = o3tmean2 - mean(o3tmean2, na.rm = TRUE)))
 ```
 
 Note that there are only two columns in the transmuted data frame.
@@ -486,19 +486,21 @@ So the stratum is the year, and that is something we can derive from the `date` 
 First, we can create a `year` variable using `as.POSIXlt()`.
 
 ```{r}
-chicago <- dplyr::mutate(chicago, year = as.POSIXlt(date)$year + 1900)
+chicago <- mutate(chicago, year = as.POSIXlt(date)$year + 1900)
 ```
 
 Now we can create a separate data frame that splits the original data frame by year.
 
 ```{r}
-years <- dplyr::group_by(chicago, year)
+years <- group_by(chicago, year)
 ```
 
 Finally, we compute summary statistics for each year in the data frame with the `summarize()` function.
 
 ```{r}
-dplyr::summarize(years, pm25 = mean(pm25, na.rm = TRUE), 
+
+summarize(years, 
+          pm25 = mean(pm25, na.rm = TRUE), 
           o3 = max(o3tmean2, na.rm = TRUE), 
           no2 = median(no2tmean2, na.rm = TRUE))
 ```
@@ -529,9 +531,9 @@ first(x) %>% second %>% third
 Take the example that we just did in the last section, but here use the pipe operator in a single expression.
 
 ```{r}
-dplyr::mutate(chicago, year = as.POSIXlt(date)$year + 1900) %>%    
-        dplyr::group_by(year) %>% 
-        dplyr::summarize(years, pm25 = mean(pm25, na.rm = TRUE), 
+mutate(chicago, year = as.POSIXlt(date)$year + 1900) %>%    
+        group_by(year) %>% 
+        summarize(years, pm25 = mean(pm25, na.rm = TRUE), 
           o3 = max(o3tmean2, na.rm = TRUE), 
           no2 = median(no2tmean2, na.rm = TRUE))
 ```
@@ -556,7 +558,7 @@ The number of rows to show is specified by the `n` argument.
 ### Example
 
 ```{r}
-dplyr::slice_sample(chicago, n = 10)
+slice_sample(chicago, n = 10)
 ```
 
 You can also use `slice_head()` or `slice_tail()` to take a look at the top rows or bottom rows of your tibble. Again the number of rows can be specified with the `n` argument.
@@ -564,13 +566,13 @@ You can also use `slice_head()` or `slice_tail()` to take a look at the top rows
 This will show the first 5 rows.
 
 ```{r}
-dplyr::slice_head(chicago, n = 5)
+slice_head(chicago, n = 5)
 ```
 
 This will show the last 5 rows.
 
 ```{r}
-dplyr::slice_tail(chicago, n = 5)
+slice_tail(chicago, n = 5)
 ```
 
 # The ggplot2 Plotting System
@@ -717,7 +719,7 @@ We can also stratify the scatter plot by another variable (e.g. `sex`) by **addi
 
 ```{r, message=FALSE}
 penguins %>% 
-  dplyr::filter(!is.na(sex)) %>% 
+  filter(!is.na(sex)) %>% 
   ggplot(aes(x = flipper_length_mm, 
              y = bill_length_mm, 
              color = species)) + 
